# XBingWallPaper

./: CMakeLists.txt  README.md  XBingWallPaper.pro
Common/: AppConfig.cpp  AppConfig.h  Common.pri  CommonHelper.cpp  CommonHelper.h  HttpClient.cpp  HttpClient.h  WallpaperItem.cpp  WallpaperItem.h
Dialog/: Dialog.pri  FramelessWidget.cpp  FramelessWidget.h  MainDialog.cpp  MainDialog.h  WallpaperItemDelegate.cpp  WallpaperItemDelegate.h  WallpaperListView.cpp  WallpaperListView.h
asset/: info  org.xzg.xbingwallpaper.desktop
asset/translations/: xbingwallpaper_zh_CN.qm
src/: CMakeLists.txt  main.cpp
src/Common/: AppConfig.cpp  AppConfig.h  AutoUpdateWallpaperAgent.cpp  AutoUpdateWallpaperAgent.h  Common.pri  CommonHelper.cpp  CommonHelper.h  Global.h  HttpClient.cpp  HttpClient.h  ImageLoaderProxy.cpp  ImageLoaderProxy.h  Version.h
src/Dialog/: AboutDialog.cpp  AboutDialog.h  AboutWidget.cpp  AboutWidget.h  Dialog.pri  DonationWidget.cpp  DonationWidget.h  FramelessWidget.cpp  FramelessWidget.h  MainDialog.cpp  MainDialog.h  PreviewWallpaperDialog.cpp  PreviewWallpaperDialog.h  SettingDialog.cpp  SettingDialog.h  SettingWidget.cpp  SettingWidget.h  TitleWidget.cpp
src/ListViewModel/: ListViewModel.pri  WallpaperItem.cpp  WallpaperItem.h  WallpaperItemDelegate.cpp  WallpaperListView.cpp  WallpaperListView.h
src/Resources/: res.qrc
src/Resources/dark_style/: darkstyle.qss
src/Resources/translations/: xbingwallpaper_zh_CN.ts
